# Pythonist

./: .gitignore  LICENSE  README.md
Projects/API_projects/ISS/: main.py
Projects/API_projects/Kayne-tkinter-app/: main.py
Projects/API_projects/Quizly_app/: data.py  main.py  quiz_brain.py  ui.py
Projects/API_projects/Trave_deals_app/: data_manager.py  email_manager.py  flight_search.py  gui.py  main.py  notification_manager.py
Projects/API_projects/Workout_tracking/: Workout tracking.csv  main.py
Projects/API_projects/habbit-tracker/: MY_Graph.htm  main.py
Projects/API_projects/pdf-to-audio/: main.py
Projects/API_projects/stock_track/: main.py
Projects/API_projects/sunset/: main.py
Projects/API_projects/weather_detecting/: main.py
Projects/Automate_Projects/Birthday_Wisher/: birthdays.csv  main.py
Projects/Automate_Projects/Format_Name/: FormatName.py
Projects/Automate_Projects/Makefile/: Makefile.txt  SyntaxError.py  command.py  file_manager.py  graph.py  interpreter.py  main.py  parser.py  pyproject.toml  task.py  validator.py
Projects/Flattening-3d-array/: index.js  main.py
Projects/Notification/: Email-Verification-Gmail-template.html  advanced_email_manager.py  email_manager.py  notification_manager.py  whatsapp_manager.py
Projects/Open-cv-projects/: watermark.py
Projects/PYTUBE-projects/: main.py
Projects/extracting_&_drawing_picture/: hirst_painting.py
Projects/pillow_projects/: add_watermarks_to_pictures.py  black_&_white.py  convert_extensios.py  filter_pics.py  resize_pics.py  rotate_pics.py  to_asci_converter_pics.py
(+189 files in other folders)
