[tool.poetry]
name = "makefile"
version = "0.1.0"
description = "makefile implementation"
authors = ["osa"]

[tool.poetry.dependencies]
python = "^3.10"
alive-progress = "^2.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
